--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,36 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
+  "compilerOptions": {
+    "target": "ES2018",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "lib": [
+      "ESNext",
+      "ESNext.AsyncIterable",
+      "DOM"
+    ],
+    "esModuleInterop": true,
+    "allowJs": true,
+    "sourceMap": true,
+    "strict": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "types": [
+      "@nuxt/types",
+      "@nuxt/typescript-build",
+      "@types/node",
+      "./.nuxt/types/imports.d.ts",
+      "./.nuxt/types/nitro-imports.d.ts"
+    ],
+    "typeRoots": ["./.nuxt/types/imports.d.ts", "./.nuxt/types/nitro-imports.d.ts"]
+  },
+  "exclude": [
+    "node_modules",
+  ],
   "extends": "./.nuxt/tsconfig.json"
 }
