--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,18 @@ services:
     build: .
     container_name: nsign-petstore-nuxt
     restart: unless-stopped
+    networks:
+      - nuxt-network
     ports:
       - "3000:3000"
+      - "44383:44383"
+      - "24678:24678"
+    environment:
+      - chokidar_usepolling=true
+    volumes:
+      - ./:/app
+      - /app/node_modules
+
+networks:
+  nuxt-network:
+    driver: bridge
